--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a class='list-group-item list-group-item-action' href="http://funnys3c.ddns.net:8112/" onclick="return OpenInNewTab(this,event);">Deluge - Torrent Client</a>
                     <a class='list-group-item list-group-item-action' href="https://funnys3c.ddns.net/phpmyadmin" onclick="return OpenInNewTab(this,event);">PHP MyAdmin Page</a>
                     <a class='list-group-item list-group-item-action' href="#" onclick="return OpenInNewTab(this,event);">Pi-Hole</a>
-                    <a class='list-group-item list-group-item-action' href="#" onclick="return OpenInNewTab(this,event);">About Me</a>
+                    <a class='list-group-item list-group-item-action' href="about.html" onclick="return OpenInNewTab(this,event);">About Me</a>
                 </div>
             </div>
             <div class="col-8" style="padding-left: 5px;padding-right: 5px;">
