--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <div class="intro">
         <div class="intro_logo">
-            <img src="img/IMG_0093.JPG">
+            <img src="img/render_kaito_kid_cute_by_michiyo.png">
         </div>
         <div class="intro_text">
             <span>About Me | Vo Duy</span>
@@ -21,19 +21,22 @@
             <span class="pink">soon</span>
         </div>
         <div class="intro_social">
-            <a href="#" target="_blank">
+            <a href="https://www.linkedin.com/in/vonhatduy/" target="_blank">
                 <i class="fa fa-linkedin"></i>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://join.skype.com/invite/emQG9k5f9pgm" target="_blank">
+                <i class="fa fa-skype"></i>
+            </a>
+            <a href="https://github.com/vonhatduy" target="_blank">
                 <i class="fa fa-github"></i>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/_nhatduy_/" target="_blank">
                 <i class="fa fa-instagram"></i>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.facebook.com/funnys3c" target="_blank">
                 <i class="fa fa-facebook"></i>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://codepen.io/vonhatduy" target="_blank">
                 <i class="fa fa-codepen"></i>
             </a>
         </div>
