--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         Blog này chia sẻ kiến thức về Programming, Networking & System. Kinh nghiệm làm việc thực tế."
                     </p>
                     <p style="text-align: center ;margin-top: 15px ;font-family: Arial, Helvetica, sans-serif;font-size: 20px; font-weight:300; line-height:22px; color: #87f753;">
-                        <a href="#">Contact</a>
+                        <a href="about.html" onclick="return OpenInNewTab(this,event);">Contact</a>
                     </p>
                 </div>
             </div>
