--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
             <img src="img/render_kaito_kid_cute_by_michiyo.png">
         </div>
         <div class="intro_text">
-            <span>About Me | Vo Duy</span>
-            <span class="pink">coming</span>
-            <span class="pink">soon</span>
+            <span>About Me</span>
+            <span class="pink">Vo</span>
+            <span class="pink">Duy</span>
         </div>
         <div class="intro_social">
             <a href="https://www.linkedin.com/in/vonhatduy/" target="_blank">
