--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
+
     <script lang="JavaScript">
         function OpenInNewTab(self,e){
             e.preventDefault();
@@ -51,8 +51,9 @@
                 <div style="margin: 15px 0 15px 0;text-align: center;">
                     <img style="border-radius: 50%; max-width: 200px;" src="/img/IMG_0093.JPG" alt="NO IMAGE">
                     <p style="text-align: left;margin-top: 15px ;font-family: Arial, Helvetica, sans-serif;font-size: 15px; font-weight:300; line-height:22px; color: #aaaaaa;">
-                        "Mình là Duy - NetDev Engineer, mình yêu lập trình (đặc biệt là Web Dev).<br />
-                        Blog này chia sẻ kiến thức về Programming, Networking & System. Kinh nghiệm làm việc thực tế."
+                        "Mình là Duy <br />
+                        Network Engineer- VNG Cloud, yêu lập trình.<br />
+                        Cám ơn các bạn đã ghé thăm website mình!"
                     </p>
                     <p style="text-align: center ;margin-top: 15px ;font-family: Arial, Helvetica, sans-serif;font-size: 20px; font-weight:300; line-height:22px; color: #87f753;">
                         <a href="about.html" onclick="return OpenInNewTab(this,event);">Contact</a>
