--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div style="margin: 15px 0 15px 0;text-align: center;">
                     <img style="border-radius: 50%; max-width: 200px;" src="/img/IMG_0093.JPG" alt="NO IMAGE">
                     <p style="text-align: left;margin-top: 15px ;font-family: Arial, Helvetica, sans-serif;font-size: 15px; font-weight:300; line-height:22px; color: #aaaaaa;">
-                        Mình là Võ Duy <br />
+                        Mình là Võ Duy!<br />
                         Network Engineer - VNG Cloud<br />
                         Là một người yêu công nghệ, thích tìm tòi. 
                         Mình vọc vạch đủ mọi thứ liên quan đến Tech (network,system,programming,smarthome...).
