--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         Mình là Võ Duy!<br />
                         Network Engineer - VNG Cloud<br />
                         Là một người yêu công nghệ, thích tìm tòi. 
-                        Mình vọc vạch đủ mọi thứ liên quan đến Tech (network,system,programming,smarthome...).
+                        Mình vọc vạch đủ mọi thứ liên quan đến tech (network,system,programming,smarthome...).
                         Dạo gần đây mình có hứng thú với Raspberry Pi, và làm được nhiều trò "nghịch" với nó.<br />
                         Cám ơn các bạn đã ghé thăm website mình!
                     </p>
