--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                 </h1>
                 <div class="list-group">
                     <a class='list-group-item list-group-item-action' href="http://funnys3c.ddns.net:8888" onclick="return OpenInNewTab(this,event);">RasPi Status</a>
-                    <a class='list-group-item list-group-item-action' href="#" onclick="return OpenInNewTab(this,event);">My Blog Page</a>
+                    <a class='list-group-item list-group-item-action' href="maintenance.html" onclick="return OpenInNewTab(this,event);">My Blog Page</a>
                     <a class='list-group-item list-group-item-action' href="https://funnys3c.ddns.net/nextcloud" onclick="return OpenInNewTab(this,event);">My NextCloud</a>
-                    <a class='list-group-item list-group-item-action' href="http://funnys3c.ddns.net:8123/" onclick="return OpenInNewTab(this,event);">Home Assistant</a>
+                    <a class='list-group-item list-group-item-action' href="maintenance.html" onclick="return OpenInNewTab(this,event);">Home Assistant</a>
                     <a class='list-group-item list-group-item-action' href="https://funnys3c.ddns.net:19910" onclick="return OpenInNewTab(this,event);">Shellinabox</a>
                     <a class='list-group-item list-group-item-action' href="https://funnys3c.ddns.net/cacti" onclick="return OpenInNewTab(this,event);">Cacti</a>
                     <a class='list-group-item list-group-item-action' href="http://funnys3c.ddns.net:8112/" onclick="return OpenInNewTab(this,event);">Deluge - Torrent Client</a>
                     <a class='list-group-item list-group-item-action' href="https://funnys3c.ddns.net/phpmyadmin" onclick="return OpenInNewTab(this,event);">PHP MyAdmin Page</a>
-                    <a class='list-group-item list-group-item-action' href="#" onclick="return OpenInNewTab(this,event);">Pi-Hole</a>
+                    <a class='list-group-item list-group-item-action' href="maintenance.html" onclick="return OpenInNewTab(this,event);">Pi-Hole</a>
                     <a class='list-group-item list-group-item-action' href="about.html" onclick="return OpenInNewTab(this,event);">About Me</a>
                 </div>
             </div>
@@ -49,13 +49,14 @@
             </div>
             <div class="col-2" style="border-radius: 10px;background-color: #293949">
                 <div style="margin: 15px 0 15px 0;text-align: center;">
-                    <img style="border-radius: 50%; max-width: 200px;" src="/img/IMG_0093.JPG" alt="NO IMAGE">
+                    <img style="border-radius: 50%; max-width: 200px;" src="img/IMG_0664.jpg" alt="NO IMAGE">
                     <p style="text-align: left;margin-top: 15px ;font-family: Arial, Helvetica, sans-serif;font-size: 15px; font-weight:300; line-height:22px; color: #aaaaaa;">
                         Mình là Võ Duy!<br />
                         Network Engineer - VNG Cloud<br />
                         Là một người yêu công nghệ, thích tìm tòi. 
-                        Mình vọc vạch đủ mọi thứ liên quan đến tech (network,system,programming,smarthome...).
-                        Dạo gần đây mình có hứng thú với Raspberry Pi, và làm được nhiều trò "nghịch" với nó.<br />
+                        Mình vọc vạch đủ mọi thứ liên quan đến tech (network,system,programming,
+                        smarthome...).
+                        Dạo gần đây mình có hứng thú với RaspberryPi, và làm được nhiều trò "nghịch" với nó.<br />
                         Cám ơn các bạn đã ghé thăm website mình!
                     </p>
                     <p style="text-align: center ;margin-top: 15px ;font-family: Arial, Helvetica, sans-serif;font-size: 20px; font-weight:300; line-height:22px; color: #87f753;">
