update landing page ketoan

--- a/ketoan.html
+++ b/ketoan.html
@@ -7,13 +7,10 @@
     <title>Phần Mềm Kế Toán Doanh Nghiệp MISA</title>
     <link rel="icon" type="img/png" href="img/Logo_MISA.jpg">
     <link rel="stylesheet" href="css/style_ketoan.css" type="text/css" media="all">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css'>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css'>
+    <link rel="stylesheet" href="css/style_ketoan.css">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -34,8 +31,67 @@
     </header>
     <div class="container-fluid navbar-container fixed-top">
         <div class="row">
-            <div class="container"></div>
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-light border-bottom py-2">
+                    <a class="navbar-brand" href="#">
+                        <img class="img-fluid" title="Phần Mềm Kế Toán Doanh Nghiệp | Vi Võ" src="img/logo_MISA.png" alt="logo">
+                    </a>
+                    <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbar">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item text-center">
+                                <a class="nav-link" href="#features">TRANG CHỦ</a>
+                            </li>
+                            <li class="nav-item text-center">
+                                <a class="nav-link" href="#features">MISA SME.NET 2019</a>
+                            </li>
+                            <li class="nav-item text-center">
+                                <a class="nav-link" href="#features">Hóa Đơn Điện Tử - MeInVoice 2019</a>
+                            </li>
+                            <li class="nav-item text-center">
+                                <a class="nav-link" href="#features">LIÊN HỆ</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
+    <div class="container text-center py-5" id="features">
+        <div>
+            <h2 class="font-weight-light text-capitalize">TẠI SAO BẠN NÊN CHỌN MISA?</h2>
+            <div class="container text-center" style="width: 15%; height: 4px; background-color:#e8e8e8;"></div>
+		</div>
+        <div class="row">
+            <div class="col-sm">
+			    <i class="fas text-danger fa-pencil-alt fa-3x py-4"></i>
+			    <h6 class="text-uppercase">CHÍNH XÁC</h6>
+			    <p class="text-muted">Từng nghiệp vụ đều được thiết kế theo đúng thông tư 133/2016/TT-BTC và 200/2014/TT-BTC</p>
+            </div>
+            <div class="col-sm">
+			    <i class="fas text-danger fa-shipping-fast fa-3x py-4"></i>
+			    <h6 class="text-uppercase">NHANH CHÓNG</h6>
+			    <p class="text-muted">Kiểm tra, đối chiếu chứng tử, sổ sách, kết chuyển lãi lỗ, lập BCTC tự động sau khoảng 5 phút</p>
+            </div>
+            <div class="col-sm">
+			    <i class="fas text-danger fa-money-bill fa-3x py-4"></i>
+			    <h6 class="text-uppercase">ĐÁP ỨNG ĐẦY ĐỦ</h6>
+			    <p class="text-muted">Đáp ứng đầy đủ nghiệp vụ kế toán cho từng lĩnh vực: thương mại, dịch vụ, xây dựng, sản xuất</p>
+            </div>
+            <div class="col-sm">
+			    <i class="fas text-danger fa-desktop fa-3x py-4"></i>
+			    <h6 class="text-uppercase">TIẾT KIỆM</h6>
+			    <p class="text-muted">Giảm đến 80% thời gian, 90% sai sót so với làm kế toán theo phương pháp thông thường</p>
+		    </div>
+        </div>
+    </div>
+    
+    <!-- partial -->
+    <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js'></script>
 </body>
 </html>
