update landing page ketoan

--- a/ketoan.html
+++ b/ketoan.html
@@ -61,7 +61,7 @@
     <div class="container-fluid navbar-container fixed-top">
         <div class="row">
             <div class="container">
-                <nav class="navbar navbar-expand-lg navbar-light border-bottom py-2">
+                <nav class="navbar navbar-expand-lg navbar-light py-2">
                     <a class="navbar-brand" href="#">
                         <img class="img-fluid" title="Phần Mềm Kế Toán Doanh Nghiệp | Vi Võ" src="img/logo_MISA.png" alt="logo">
                     </a>
