--- a/ketoan.html
+++ b/ketoan.html
@@ -31,7 +31,7 @@
                     <div class="container">
                         <h1>MISA - PHẦN MỀM KẾ TOÁN DOANH NGHIỆP</h1>
                         <p class="lead">Triển Khai Nhanh Chóng - Tư Vấn Miễn Phí</p>
-                        <a href="#contact" class="btn btn-danger rounded-0 my-5">ĐĂNG KÝ DÙNG THỬ</a>
+                        <a href="#contact" class="btn btn-danger rounded-0 my-5">TƯ VẤN MIỄN PHÍ</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
     <div class="container text-center py-5" id="features">
         <div>
             <h2 class="font-weight-light text-capitalize">TẠI SAO BẠN NÊN CHỌN MISA?</h2>
-            <div class="container text-center" style="width: 15%; height: 4px; background-color:#e8e8e8;"></div>
+            <div class="container text-center" style="width: 15%; height: 4px; background-color:#dad6d6;"></div>
 		</div>
         <div class="row">
             <div class="col-lg-4 col-md-6">
@@ -139,6 +139,39 @@
                     giúp đảm bảo an toàn dữ liệu cho công ty. Đồng thời, có thể khôi phục lại dữ liệu ngay tức thì trên máy tính khác. 
                     Đảm bảo hoạt động kinh doanh thông suốt và hiệu quả.</p>
 		    </div>
+        </div>
+    </div>
+
+    <div class="container-fluid px-0 py5 text-center" id="#">
+        <div class="row no-gutters">
+            <div class="col-6 project-container">
+                <div class="project" style="background-image: url('img/MISA_SME 2019.PNG');">
+                    <div class="overlay">
+                        <h6 class="text-uppercase">
+                            <a href="#" class="text-white">MISA SME.NET 2019</a>
+                        </h6>
+                        <p>Phần mềm kế toán doanh nghiệp vừa & nhỏ MISA SME.NET</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 project-container">
+                <div class="project" style="background-image: url('img/me-invoice.jpeg');">
+                    <div class="overlay">
+                        <h6 class="text-uppercase">
+                            <a href="#" class="text-white">MISA MeInVoice 2019</a>
+                        </h6>
+                        <p>Phần mềm hóa đơn điện tử MISA MEINVOICE</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container py-5" id="consult">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-10 text-center">
+                <h2 class="font-weight-light text-capitalize">LIÊN HỆ MUA HÀNG</h2>
+            </div>
         </div>
     </div>
     
