update landing page ketoan

--- a/ketoan.html
+++ b/ketoan.html
@@ -147,20 +147,28 @@
             <div class="col-6 project-container">
                 <div class="project" style="background-image: url('img/MISA_SME 2019.PNG');">
                     <div class="overlay">
-                        <h6 class="text-uppercase">
-                            <a href="#" class="text-white">MISA SME.NET 2019</a>
-                        </h6>
+                        <h2 class="text-uppercase text-white">
+                            MISA SME.NET 2019
+                        </h2>
                         <p>Phần mềm kế toán doanh nghiệp vừa & nhỏ MISA SME.NET</p>
+                        <div>
+                            <a href="#demo" style="text-align: center;width: 170px;font-weight: bold;background-color: tomato;" class="btn btn-danger rounded-pill">Xem DEMO</a>
+                            <a href="#chitiet" style="text-align: center;width: 170px;font-weight: bold;background-color: teal;" class="btn btn-danger rounded-pill">Chi Tiết</a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-6 project-container">
                 <div class="project" style="background-image: url('img/me-invoice.jpeg');">
                     <div class="overlay">
-                        <h6 class="text-uppercase">
-                            <a href="#" class="text-white">MISA MeInVoice 2019</a>
-                        </h6>
+                        <h2 class="text-uppercase">
+                            MISA MeInVoice 2019
+                        </h2>
                         <p>Phần mềm hóa đơn điện tử MISA MEINVOICE</p>
+                        <div>
+                            <a href="#demo" style="text-align: center;width: 170px;font-weight: bold;background-color: tomato;" class="btn btn-danger rounded-pill">Xem DEMO</a>
+                            <a href="#chitiet" style="text-align: center;width: 170px;font-weight: bold;background-color: teal;" class="btn btn-danger rounded-pill">Chi Tiết</a>
+                        </div>
                     </div>
                 </div>
             </div>
