--- a/ketoan.html
+++ b/ketoan.html
@@ -13,7 +13,6 @@
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css'>
     <!-- CSS Custom -->
     <link rel="stylesheet" href="css/style_ketoan.css" type="text/css" media="all">
-
 </head>
 <body>
     <!-- Start Header -->
@@ -107,37 +106,41 @@
 			    <i class="fas text-danger fa-star fa-3x py-4"></i>
 			    <h6 class="text-uppercase">Sử dụng thật dễ dàng</h6>
 			    <p class="text-muted" style="text-align: left;">Giao diện người dùng trực quan cho việc quản trị, 
-                cập nhật thông tin dễ dàng, thay đổi thông tin chỉ với vài nhấp chuột. 
-                Phần mềm cài đặt và sử dụng dễ dàng cho như các ứng dụng văn phòng khác. 
-                Thao tác đơn giản, hiệu suất cao</p>
+                    cập nhật thông tin dễ dàng, thay đổi thông tin chỉ với vài nhấp chuột. 
+                    Phần mềm cài đặt và sử dụng dễ dàng cho như các ứng dụng văn phòng khác. 
+                    Thao tác đơn giản, hiệu suất cao.
+                </p>
             </div>
             <div class="col-lg-4 col-md-6">
 			    <i class="fas text-danger fa-cogs fa-3x py-4"></i>
 			    <h6 class="text-uppercase">Cơ chế phân quyền cao cấp</h6>
 			    <p class="text-muted" style="text-align: left;">Hệ thống quản trị được lập trình thông minh, giúp phân quyền giữa Giám Đốc, 
                     Kế Toán Trưởng và nhân viên. Quản lý chứng từ, kho… thông minh hiệu quả. 
-                    Nâng cao tính bảo mật an toàn dữ liệu cho doanh nghiệp</p>
+                    Nâng cao tính bảo mật an toàn dữ liệu cho doanh nghiệp.
+                </p>
             </div>
             <div class="col-lg-4 col-md-6">
 			    <i class="fas text-danger fa-chart-bar fa-3x py-4"></i>
 			    <h6 class="text-uppercase">Hơn 25 năm kinh nghiệm</h6>
                 <p class="text-muted" style="text-align: left;">Phần mềm kế toán Misa đã được khách hàng tin tưởng sử dụng hơn 25 năm qua. 
-                Và số lượng công ty đăng ký sử dụng không ngừng tăng lên trong từng ngày phần nào chứng minh được năng lực của Misa
-            </p>
+                    Và số lượng công ty đăng ký sử dụng không ngừng tăng lên trong từng ngày phần nào chứng minh được năng lực của Misa
+                </p>
             </div>
             <div class="col-lg-4 col-md-6">
 			    <i class="fas text-danger fa-upload fa-3x py-4"></i>
 			    <h6 class="text-uppercase">Nâng cấp thường xuyên</h6>
                 <p class="text-muted" style="text-align: left;">Phần mềm Misa cập nhật liên tục các thay đổi từ nghành thuế và kế toán. 
                     Đảm bảo tiêu chí phù hợp, tương thích với hệ thống luật và hệ thống kinh doanh hiện tại. 
-                    Giúp doanh nghiệp tiết kiệm tiền, thời gian cho công việc quản lý.</p>
+                    Giúp doanh nghiệp tiết kiệm tiền, thời gian cho công việc quản lý.
+                </p>
             </div>
             <div class="col-lg-4 col-md-6">
 			    <i class="fas text-danger fa-copy fa-3x py-4"></i>
 			    <h6 class="text-uppercase">Cơ chế sao lưu thông minh</h6>
                 <p class="text-muted" style="text-align: left;">Phần mềm misa tự động sao lưu dữ liệu định kỳ, 
                     giúp đảm bảo an toàn dữ liệu cho công ty. Đồng thời, có thể khôi phục lại dữ liệu ngay tức thì trên máy tính khác. 
-                    Đảm bảo hoạt động kinh doanh thông suốt và hiệu quả.</p>
+                    Đảm bảo hoạt động kinh doanh thông suốt và hiệu quả.
+                </p>
 		    </div>
         </div>
     </div>
@@ -175,15 +178,79 @@
         </div>
     </div>
 
+    <div>
+
+    </div>
+
     <div class="container py-5" id="consult">
         <div class="row justify-content-center">
             <div class="col-lg-8 col-10 text-center">
                 <h2 class="font-weight-light text-capitalize">LIÊN HỆ MUA HÀNG</h2>
+                <h6 class="font-weight-bold">Vui lòng để lại thông tin, chúng tôi sẽ chủ động liên hệ lại!</h6>
+                <button class="btn btn-danger mt-4 text-uppercase rounded-0">LIÊN HỆ</button>
             </div>
         </div>
     </div>
     
-    <!-- partial -->
+    <!-- Start Pre-footer -->
+    <div class="container-fluid text-center py-5 pre-footer text-white">
+        <div class="row">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h6 class="text-uppercase mb-3 mt-4 mt-md-0">Địa điểm</h6>
+                        <p class="text-muted">Hưng Ngân Garden
+                            <br />48A Dương Thị Mười, Tân Hưng Thuận
+                            <br /> Quận 12, TP.Hồ Chí Minh
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <h6 class="text-uppercase mb-3 mt-4 mt-md-0">Liên Kết</h6>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fa fa-phone"></i>
+                        </a>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fa fa-link"></i>
+                        </a>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fa fa-inbox"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <h6 class="text-uppercase mb-3 mt-4 mt-md-0">MISA - Phần Mềm Kế Toán Doanh Nghiệp</h6>
+                        <p class="text-muted">Triển Khai Nhanh Chóng - Tư Vấn Miễn Phí</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Pre-footer -->
+
+    <!-- Start footer -->
+    <footer class="container-fluid text-center py-4">
+        <div class="row">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <p class="text-muted">
+                            Được viết bởi
+                            <i class="fa fa-heart text-danger"></i> by
+                            <a target="_blank" href="#" class="text-white">Duy Võ</a>
+                            <br/>Copyright@
+                            <a target="_blank" href="#" class="text-white">DuyVo</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- JS -->
     <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js'></script>
