--- a/ketoan.html
+++ b/ketoan.html
@@ -25,7 +25,7 @@
             </ol>
             <div class="carousel-inner" role="listbox">
             <!-- Slide One - Set the background image for this slide in the line below -->
-            <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
+            <div class="carousel-item active" style="background-image: url('img/cover.jpeg')">
                 <div class="carousel-caption">
                     <div class="container">
                         <h1>MISA - PHẦN MỀM KẾ TOÁN DOANH NGHIỆP</h1>
@@ -147,7 +147,7 @@
 
     <div class="container-fluid px-0 py5 text-center" id="#">
         <div class="row no-gutters">
-            <div class="col-6 project-container">
+            <div class="col-lg-6 project-container">
                 <div class="project" style="background-image: url('img/MISA_SME 2019.PNG');">
                     <div class="overlay">
                         <h2 class="text-uppercase text-white">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 project-container">
+            <div class="col-lg-6 project-container">
                 <div class="project" style="background-image: url('img/me-invoice.jpeg');">
                     <div class="overlay">
                         <h2 class="text-uppercase">
@@ -264,7 +264,7 @@
                 <div class="row">
                     <div class="col">
                         <p class="text-muted">
-                            Được viết bởi
+                            Được phát triển với
                             <i class="fa fa-heart text-danger"></i> by
                             <a target="_blank" href="#" class="text-white">Duy Võ</a>
                             <br/>Copyright@
