--- a/sme.html
+++ b/sme.html
@@ -26,7 +26,7 @@
             </ol>
             <div class="carousel-inner" role="listbox">
             <!-- Slide One - Set the background image for this slide in the line below -->
-            <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
+            <div class="carousel-item active" style="background-image: url('img/cover.jpeg')">
                 <div class="carousel-caption">
                     <div class="container">
                         <h1>MISA - PHẦN MỀM KẾ TOÁN DOANH NGHIỆP</h1>
